asset/css/admin.css
/* Globals */

#page-action-menu {
    display: inline-block;
    position: relative;
}

#page-action-menu ul {
    display: none;
    list-style: none;
    border: 1px solid #dfdfdf;
    background-color: #fff;
    border-radius: 3px;
    text-align: left;
    padding: 0;
    position: relative;
    box-shadow: 0 0 5px #dfdfdf;
    position: absolute;
    right: 0;
    width: auto;
    white-space: nowrap;
    margin: 12px 0;
}

#page-action-menu ul:before {
    content: "";
    position: absolute;
    bottom: calc(100% - 1px);
    right: 12px;
    width: 0;
    height: 0;
    border-bottom: 12px solid #fff;
    border-left: 6px solid transparent;
    border-right: 6px solid transparent;
}

#page-action-menu ul:after {
    content: "";
    position: absolute;
    bottom: calc(100% - 1px);
    right: 11px;
    width: 0;
    height: 0;
    border-bottom: 14px solid #dfdfdf;
    border-left: 7px solid transparent;
    border-right: 7px solid transparent;
    z-index: -1;
}

#page-action-menu ul a,
#page-action-menu ul .inactive {
    padding: 6px 12px 5px;
    display: block;
    position: relative;
}

#page-action-menu ul .inactive {
    color: #dfdfdf;
}

#page-action-menu ul li {
  position: relative;
}

#page-action-menu ul li:hover:before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    width: 3px;
    background-color: #dfdfdf;
}

#page-action-menu ul li:not(:last-child) a,
#page-action-menu ul li:not(:last-child) span,
#page-action-menu ul li:not(:last-child) [type="submit"] {
    border-bottom: 1px solid #dfdfdf;
}

#page-action-menu [type="submit"] {
    background: none;
    box-shadow: none;
    width: 100%;
    margin-bottom: 0;
    text-align: left;
}

#page-action-menu .expand:after {
    content: "\f0d7";
}

#page-action-menu .expand:after,
#page-action-menu .collapse:after {
    margin-left: 6px;
}

#page-action-menu .collapse + .collapsible {
    overflow: visible;
    display: block;
}

.breadcrumbs > *:not(:last-child):after {
    content: none;
}

.breadcrumbs .separator {
    display: inline-block;
    margin: 0 6px;
    color: #000;
}

.breadcrumbs .separator:after {
    content: "\f0da";
    font-family: "Font Awesome 5 Free";
    margin: 0;
    font-weight: 900;
}

[name^="top-anchor"] {
    display: block;
    visibility: hidden;
}

/* Browse */

.browse .browse-controls {
    justify-content: space-between;
    width: 100%;
    clear: both;
}

.browse .browse-controls > form,
.browse .browse-controls > div,
.browse .browse-controls > nav {
    width: 50%;
}

.browse .browse-controls .sorting,
.browse .browse-controls .filtering {
    text-align: right;
    display: flex;
    flex-wrap: wrap;
}

.browse-controls .filtering {
  margin-left: 0;
  justify-content: flex-end;
}

.browse-controls .sorting select {
  max-width: 40%;
}

.browse-controls .filtering select {
  max-width: 80%;
}

.browse-controls .sorting > *:not(:first-child),
.browse-controls .filtering > *:not(:first-child) {
  margin-left: .25rem;
}

.alert {
  text-indent: -9999px;
  display: inline-block;
  position: relative;
  width: 1rem;
  margin-right: .5rem;
  color: #A91919;
}

.alert:before {
  content: "\f06a";
  font-family: "Font Awesome 5 Free";
  position: absolute;
  top: 50%;
  left: 50%;
  text-indent: 0;
  text-align: center;
  transform: translateX(-50%) translateY(-50%);
}

.datascribe.item.browse td:first-child,
.datascribe.item.browse th:first-child {
  width: auto;
}

.datascribe.item.browse td:nth-child(2),
.datascribe.item.browse th:nth-child(2) {
  width: 50%;
}

.datascribe.item.browse .item-id {
  float: right;
  margin-left: auto;
}

.datascribe.record.browse td:first-child,
.datascribe.record.browse th:first-child,
.tablesaw-swipe .tablesaw-swipe-cellpersist {
  width: 7rem !important;
  border-right: 1px solid #dfdfdf;
}

.tablesaw-swipe-wrapper th,
.record.browse th {
  width: 7rem;
}

.record.browse .select-all {
  width: auto;
}

.record.browse .record-number-cell {
  display: flex;
  justify-content: flex-end;
}

.record.browse .record-number {
  text-align: right;
  margin-right: auto;
  padding-right: 1rem;
}

.record.browse .record-number-cell .actions {
  margin-left: 0;
}

.record-number-cell input[type="checkbox"] {
  margin-right: auto;
}

.record.browse #batch-form {
  position: relative;
}

.last.record-meta {
  border-right: 1px solid #dfdfdf;
}

.tablesaw-bar {
  display: flex;
  align-items: center;
}

.primary-field {
  background-color: rgba(0,0,0,.04);
}

.tablesaw-swipe-wrapper {
  position: relative;
  width: 100%;
}

.tablesaw-swipe-wrapper > .tablesaw-bar {
  background-color:rgba(0,0,0,0.04);
}

.tablesaw-swipe-wrapper table {
  table-layout: auto;
}

.record.browse #batch-form .batch-inputs {
  display: none;
}

.record.browse #batch-form .tablesaw-swipe-wrapper .batch-inputs {
  display: flex;
  background-color: transparent;
}

.batch-inputs > * {
  position: relative;
  z-index: 1;
}

.batch-inputs ~ .tablesaw-swipe-wrapper .tablesaw-bar {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.batch-inputs ~ .tablesaw-swipe-wrapper > .tablesaw-bar:before {
  content: none;
}

.batch-inputs ~ .tablesaw-swipe-wrapper > .tablesaw-bar .minimap {
  display: flex !important;
  align-items: center;
  height: 36px;
  max-width: 75%;
  line-height: 1;
  order: 1;
  margin-left: auto;
}

.tablesaw-advance:not(.minimap) {
  order: 2;
  width: 6rem;
  text-align: center;
}

.btn.tablesaw-nav-btn.tablesaw-btn.btn-micro {
  margin: 0 .1em;
  vertical-align: bottom;
}

.tablesaw-advance.minimap {
  order: 0;
  display: flex !important;
  justify-content: flex-end;
  flex-wrap: wrap;
  width: calc(100% - 60px);
}

.tablesaw-advance.minimap li {
  padding: 0 .2em;
}

.tablesaw-advance.minimap li i {
  vertical-align: middle;
}

.tablesaw-advance-dots {
  line-height: 1;
}

.tablesaw-advance-dots li {
  display: inline-block !important;
}

.tablesaw.batch-edit {
  background-color: #fff;
}
/* ... */

